Adding link to github account.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div id="cancelar">cancelar</div>
         </div>
       </div>
-      <span>By: Samuel E. Ramirez C.</span>
+      <span>By: Samuel E. Ramirez C. <a href="https://github.com/SamEliasib"><img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" width="20" height="20"></a></span>
     </center>
     <script src="./js/script.js"></script>
   </body>
