Bugfixing on reset function.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Despertador</title>
@@ -46,7 +45,7 @@
           <div id="cancelar">cancelar</div>
         </div>
       </div>
-      <span>By: Samuel E. Ramirez C. <a href="https://github.com/SamEliasib"><img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" width="20" height="20"></a></span>
+      <span>By: Samuel E. Ramirez C. <a title="github" href="https://github.com/SamEliasib"><img alt="github" src="https://cdn-icons-png.flaticon.com/512/25/25231.png" width="20" height="20"></a></span>
     </center>
     <script src="./js/script.js"></script>
   </body>
